--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -9,10 +9,9 @@ body{
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
-    
 }
 .form-control{
-    background: rgba(0, 0, 0,0.3);
+    background: rgba(0, 0, 0,0.5);
     border-style: none;
     outline: none;
     text-align: center;
@@ -31,17 +30,19 @@ body{
     background: none;
     box-shadow: none;
     outline: none;
-    background: rgba(0, 0, 0,0.3);
-    color: aliceblue;
+    background: rgba(0, 0, 0,0.7);
+    color: wheat;
 }
 
+
 .ingresar{
-    background: #222A3F;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
+    background: rgba(0, 0, 0,0.6);
     padding: 10px;
     font-size: 16px;
     font-weight: 700!important;
     color: whitesmoke;
-    transition: 0.5s ease-in;
+    transition: 0.25s ease-in;
     text-align: center;
     width: 50%;
     display:block;
@@ -49,7 +50,8 @@ body{
    
 }
 .ingresar:hover{
-    color: whitesmoke;
+    color: wheat;
+    background: rgba(0, 0, 0,1);
 }
 
 #centrador{
@@ -57,8 +59,7 @@ body{
     text-align: center;
  
 }
-
-#img{
+.img{
     width: 10%;
     height: 10%;
     text-align: center;
