--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -40,9 +40,9 @@ body{
     background: rgba(0, 0, 0,0.6);
     padding: 10px;
     font-size: 16px;
-    font-weight: 700!important;
+  
     color: whitesmoke;
-    transition: 0.25s ease-in;
+    transition: 0.15s ease-in;
     text-align: center;
     width: 50%;
     display:block;
@@ -67,3 +67,6 @@ body{
  
 }
 
+.select{
+    background: rgba(0, 0, 0,1);
+}
