--- a/estilos/index.css
+++ b/estilos/index.css
@@ -13,7 +13,7 @@
     background: rgba(0, 0, 0,0.3);
 }
 .desplegable{
-    background: rgba(0, 0, 0,0.3);
+    background: rgba(0, 1, 39, 0.5);
 }
 #intructors{
     background: rgba(0, 0, 0,0.3);
