--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -5,10 +5,13 @@ body{
     background-attachment: fixed;
 }
 
+
 .formulario{
     padding: 20px;
-    border-radius: 10px;
+  
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
+    background: rgba(0, 1, 39, 0.6);
+    margin-bottom: 5em;
 }
 .form-control{
     background: rgba(0, 0, 0,0.5);
@@ -40,7 +43,6 @@ body{
     background: rgba(0, 0, 0,0.6);
     padding: 10px;
     font-size: 16px;
-  
     color: whitesmoke;
     transition: 0.15s ease-in;
     text-align: center;
