--- a/estilos/index.css
+++ b/estilos/index.css
@@ -6,21 +6,21 @@
     width: 20%;
 }
 .button:hover{
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 1);
     box-shadow: 0 0 25px rgba(49, 0, 165, 0.5);
 }
 .informacion{
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 0.9);
 }
 .inicio{
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 0.9);
 }
 .desplegable{
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 0.3);
 }
 .card{
-    background: rgba(0, 1, 39, 0.5);
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 0.9);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
 }
 .card p{
     font-weight: bold;
@@ -30,5 +30,5 @@
     width: 50%;
 }
 #learn{
-    background: rgba(2, 3, 49, 0.95);
+    background: rgba(0, 1, 39, 0.9);
 }
