--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -2,24 +2,12 @@
     color: #fff;
     font-size: 14px;
 }
-
-
 #footer .footer-top {
-    background: #3b3b3b;
-    border-top: 1px solid #474747;
-    border-bottom: 1px solid #474747;
-    padding: 60px 0 30px 0;
+    padding: 60px;
     background: rgba(0, 1, 39, 0.9);
 }
-
-#footer .footer-top .footer-info {
-    margin-bottom: 30px
-}
-
 #footer .footer-top .footer-info h3 {
     font-size: 18px;
-    margin: 0 0 20px 0;
-    padding: 2px 0 2px 0;
     line-height: 1;
     font-weight: 700
 }
@@ -31,7 +19,9 @@
     font-family: "Raleway", sans-serif;
     color: #fff
 }
-
+#footer a{
+    text-decoration: none;
+}
 #footer .footer-top .social-links a {
     font-size: 18px;
     display: inline-block;
@@ -48,7 +38,7 @@
 }
 
 #footer .footer-top .social-links a:hover {
-    background: #e96b56;
+    background: brown;
     color: #fff;
     text-decoration: none
 }
