--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -8,10 +8,16 @@ body{
 
 .formulario{
     padding: 20px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
     background: rgba(0, 1, 39, 0.3);
     margin-bottom: 5em;
 }
+
+.formulario:hover{
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
+    transition: 0.5s;
+    transform: translatey(15px);
+}
+
 .form-control{
     background: rgba(0, 0, 0,0.5);
     border-style: none;
@@ -35,6 +41,7 @@ body{
     background: rgba(0, 0, 0,0.7);
     color: wheat;
 }
+
 .ingresar{
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
     background: rgba(0, 0, 0,0.6);
