--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -8,14 +8,14 @@ body{
 
 .formulario{
     padding: 20px;
-    background: rgba(0, 1, 39, 0.3);
+    background: rgba(0, 1, 39, 0.5);
     margin-bottom: 5em;
 }
 
 .formulario:hover{
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
     transition: 0.5s;
-    transform: translatey(15px);
+ 
 }
 
 .form-control{
@@ -26,7 +26,8 @@ body{
     width: 75%;
     display:block;
     margin: auto;
-    color: wheat;
+    color: white;
+    font-weight: bold;
    
 }
 
@@ -35,11 +36,13 @@ body{
 
 }
 .form-control:focus{
+    transition: 0.4s;
     background: none;
     box-shadow: none;
     outline: none;
-    background: rgba(0, 0, 0,0.7);
-    color: wheat;
+    background:  rgba(0, 87, 201, 0.7);
+    color: white;
+
 }
 
 .ingresar{
