--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -2,9 +2,21 @@
 
 .volver{
     color: white;
-    text-decoration: none;
+    text-decoration:none;
+    font-weight: bold;
+}
+.volver:hover{
+    color:blue;
     
-
+}
+h1{
+    color: white;
+    text-align:center;
+    padding-top: 5em;
+    font-weight: bold;
+}
+.texto{
+    font-weight: bold;
 }
 
 
