--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -9,9 +9,10 @@
     color:blue;
     
 }
-h4{
+h5{
     color: white;
     text-align:center;
+    padding-top: 5em;
     font-weight: bold;
 }
 .texto{
