--- a/estilos/ofertas.css
+++ b/estilos/ofertas.css
@@ -31,3 +31,12 @@
     background: rgba(0, 1, 39, 0.9);
     color: white;
 }
+.ensenarOferta{
+    color: #ffc107;
+    text-align:center;
+    font-weight:bold;
+    font-size:19px;
+    margin-top: 5em;
+    margin-bottom: 5em;
+    
+}
