--- a/estilos/ofertas.css
+++ b/estilos/ofertas.css
@@ -22,7 +22,6 @@
     background-size: 0% 2px;
     transition: background-size 0.3s;
 }
-
 #menuBotones a:hover{
     color: #ffc107;
 }
@@ -36,7 +35,20 @@
     text-align:center;
     font-weight:bold;
     font-size:19px;
-    margin-top: 5em;
-    margin-bottom: 5em;
-    
+}
+.binput:hover{
+    background:#ffc107;
+    transition:0.3s;
+}
+.binput{
+    display:block;
+    margin:auto;
+    width:40%;
+    font-weight:bold;
+    font-size:18px; 
+}
+.ubicacion{
+    color: #ffc107;
+    font-weight:bold;
+    font-size:15px;
 }
