--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -19,6 +19,18 @@ h6{
     font-weight: bold;
 }
 
-
-
-/* Asigno estilos al logout
+.easignada a{
+    text-decoration:none;;
+    color: white;
+    text-align:center;
+    font-weight:bold;
+    font-size:19px;
+}
+.easignada a:hover{
+    color: #ffc107;
+    transition:0.3s;
+}
+.easignada{
+    margin-top: 5em;
+    margin-bottom:5em;
+}
