--- a/estilos/ofertas.css
+++ b/estilos/ofertas.css
@@ -52,3 +52,18 @@
     font-weight:bold;
     font-size:15px;
 }
+.easignada a{
+    text-decoration:none;;
+    color: white;
+    text-align:center;
+    font-weight:bold;
+    font-size:19px;
+}
+.easignada a:hover{
+    color: #ffc107;
+    transition:0.3s;
+}
+.easignada{
+    margin-top: 5em;
+    margin-bottom:5em;
+}
