--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -44,18 +44,17 @@ h6{
 }
 .ebienvenido a{
     text-decoration:none;;
-    color: white;
+    color: red;
     text-align:center;
 
-    font-size:19px;
+   
 }
 .ebienvenido a:hover{
     color: #ffc107;
     transition:0.3s;
 }
-
-
 .ebienvenido p{
     font-weight:bold;
 }
+
 
