--- a/estilos/ofertas.css
+++ b/estilos/ofertas.css
@@ -38,6 +38,7 @@
 }
 .binput:hover{
     background:#ffc107;
+    border: 1px solid yellow;
     transition:0.3s;
 }
 .binput{
@@ -46,6 +47,7 @@
     width:40%;
     font-weight:bold;
     font-size:18px; 
+    border:1px solid white;
 }
 .ubicacion{
     color: #ffc107;
