--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -97,7 +97,7 @@ body{
     margin-top:5px;
 }
 .cc:hover{
-    color: yellow;
+    color: #ffc107;
     background: rgba(0, 0, 0,1);
 }
 .voferta{
@@ -119,7 +119,7 @@ body{
 }
 .voferta p{
     text-align: justify;
-    font-wight:bold;
+    font-weight:bold;
     font-size:15px;
     font-weight:bold;
     color: #ffc107;
