--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -65,7 +65,8 @@ h6{
     margin:auto;
     width:40%;
     font-weight:bold;
-    font-size:18px; 
+    font-size:18px;
+    border-radius: 3px;
 }
 
 
