--- a/estilos/ofertas.css
+++ b/estilos/ofertas.css
@@ -38,7 +38,6 @@
 }
 .binput:hover{
     background:#ffc107;
-    border: 1px solid yellow;
     transition:0.3s;
 }
 .binput{
@@ -47,7 +46,8 @@
     width:40%;
     font-weight:bold;
     font-size:18px; 
-    border:1px solid white;
+    border-radius: 3px;
+  
 }
 .ubicacion{
     color: #ffc107;
