--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,13 +1,14 @@
 .button{
-    background: rgba(0, 1, 39, 0.5);
+    background: rgba(0, 1, 39, 0.8);
     display:block;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: 30%;
+   border-radius: 3px;
 }
 .button:hover{
     background: rgba(0, 1, 39, 1);
-    box-shadow: 0 0 25px rgba(49, 0, 165, 0.5);
+    border-color: #ffc107;
 }
 .informacion{
     background: rgba(0, 1, 39, 0.9);
