--- a/estilos/index.css
+++ b/estilos/index.css
@@ -10,6 +10,7 @@
 .button:hover{
     background: rgba(0, 1, 39, 1);
     border-color: #ffc107;
+    transition: 0.4s;
     letter-spacing: 5px;
 }
 .informacion{
