--- a/estilos/index.css
+++ b/estilos/index.css
@@ -5,6 +5,7 @@
     margin-right: auto;
     width: 30%;
     border-radius: 3px;
+    font-size: 20px;
     
 }
 .button:hover{
@@ -12,6 +13,7 @@
     border-color: #ffc107;
     transition: 0.4s;
     letter-spacing: 5px;
+    color: #ffc107;
 }
 .informacion{
     background: rgba(0, 1, 39, 0.9);
