--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -26,7 +26,7 @@ body{
     width: 75%;
     display:block;
     margin: auto;
-    color: white;
+    color: #ffc107;
     font-weight: bold;
    
 }
@@ -41,8 +41,7 @@ body{
     box-shadow: none;
     outline: none;
     background:  rgba(0, 87, 201, 0.7);
-    color: white;
-
+    color: #ffc107;
 }
 
 .ingresar{
