--- a/estilos/do_login-logout.css
+++ b/estilos/do_login-logout.css
@@ -68,5 +68,22 @@ h6{
     font-size:18px;
     border-radius: 3px;
 }
-
+.binput2{
+    background: rgba(0, 1, 39, 0.8);
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 3px;
+    font-size: 18px;
+    color:white;
+    border-color: rgba(0, 1, 39, 0.8);
+}
+.binput2:hover{
+    background: rgba(0, 1, 39, 1);
+    border-color: #ffc107;
+    transition: 0.5s;
+    letter-spacing: 3px;
+    color: #ffc107;
+}
 
