--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -20,21 +20,17 @@ body{
 
 .form-control{
     background: rgba(0, 0, 0,0.5);
-    border-style: none;
-    outline: none;
+    border-color:#ffc107;
+  
     text-align: center;
     width: 75%;
     display:block;
     margin: auto;
     color: #ffc107;
     font-weight: bold;
-   
+    
 }
 
-.form-control::placeholder{
-    color:white;
-
-}
 .form-control:focus{
     transition: 0.4s;
     background: none;
@@ -42,25 +38,29 @@ body{
     outline: none;
     background:  rgba(0, 87, 201, 0.7);
     color: #ffc107;
+    border-color: #ffc107;
 }
 
 .ingresar{
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
-    background: rgba(0, 0, 0,0.6);
-    padding: 10px;
-    font-size: 16px;
-    color: white;
-    transition: 0.15s ease-in;
-    text-align: center;
-    width: 50%;
+    background: rgba(0, 1, 39, 0.8);
     display:block;
-    margin: auto;
-   
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 3px;
+    font-size: 18px;
+    color:white;
+    border-color: rgba(0, 1, 39, 0.8);
+    
 }
 .ingresar:hover{
+    background: rgba(0, 1, 39, 1);
+    border-color: #ffc107;
+    transition: 0.5s;
+    letter-spacing: 3px;
     color: #ffc107;
-    background: rgba(0, 0, 0,1);
 }
+
 
 #centrador{
     padding: 1%;
