--- a/estilos/header.css
+++ b/estilos/header.css
@@ -10,7 +10,7 @@ body{
 .nav-link {
   
     text-decoration: none;
-    background-image: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255));
+    background-image: linear-gradient(#ffc107, #ffc107);
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: 0% 2px;
@@ -18,4 +18,8 @@ body{
 }
 a:hover, a:focus {
     background-size: 100% 2px;
+}
+
+.nav-item a:hover{
+   animation:pulsate 1s ease-in-out; 
 }
