--- a/estilos/inicio_sesion.css
+++ b/estilos/inicio_sesion.css
@@ -15,14 +15,12 @@ body{
 
 .formulario:hover{
     animation: pulsate 1s ease-in-out;
- 
 }
 
 
 .form-control{
     background: rgba(0, 0, 0,0.5);
-    border-color:#ffc107;
-  
+    border: 1px solid #1d517c;
     text-align: center;
     width: 75%;
     display:block;
@@ -39,7 +37,7 @@ body{
     outline: none;
     background:  rgba(0, 87, 201, 0.7);
     color: #ffc107;
-    border-color: #ffc107;
+    border: 1px solid #ffc107;
 }
 
 .ingresar{
