--- a/estilos/mapa.css
+++ b/estilos/mapa.css
@@ -16,7 +16,9 @@
 #columna {
     width: 450px;
     height: 600px;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
+    background: rgba(0, 1, 39, 0.9);
+    color: white;
     border-radius: 5px;
     padding: 8px;
 }
@@ -26,4 +28,14 @@
     font-weight: 500;
     margin: auto;
     font-size: 18pt;
+}
+
+.oferta {
+    background: rgba(3, 5, 75, 0.9);
+    margin-bottom: 1em;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
