--- a/estilos/mapa.css
+++ b/estilos/mapa.css
@@ -35,7 +35,7 @@
     margin-bottom: 1em;
 }
 
-a {
-    text-decoration: none;
-    color: white;
+a, h3 {
+    text-decoration: none !important;
+    color: white !important;
 }
