--- a/estilos/mapa.css
+++ b/estilos/mapa.css
@@ -33,9 +33,17 @@
 .oferta {
     background: rgba(3, 5, 75, 0.9);
     margin-bottom: 1em;
+    border: 1px rgba(3, 5, 75, 0.9) solid;
+    border-radius: 5px;
 }
 
-a, h3 {
+#columna a h3 {
     text-decoration: none !important;
     color: white !important;
+}
+
+#columna a h3:hover {
+    text-decoration: none !important;
+    color: #ffc107 !important;
+    animation: pulsate 1s ease-in-out;
 }
